[project]
name = "cpp-module-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Retro & Chill", email = "35567462+retroandchill@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
cpp-module-gen = "cpp_module_gen:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
